--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,22 @@
 {
     "compilerOptions": {
         "target": "ES2020",
-        "module": "NodeNext", // ESM 사용
+        "module": "NodeNext",
         "moduleResolution": "NodeNext",
         "lib": [
             "ES2020",
             "DOM"
         ],
-        "noImplicitAny": true,
-        "strictNullChecks": true,
         "strict": true,
-        "declaration": true, // 타입 선언 만들고 싶으면 유지
         "esModuleInterop": true,
         "resolveJsonModule": true,
         "allowImportingTsExtensions": false,
-        "rootDir": ".",
-        "noEmit": false
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
+        "exactOptionalPropertyTypes": true,
+        "importsNotUsedAsValues": "remove",
+        "noEmit": true
     },
     "include": [
         "src"
